2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Ignore the return value of signal().

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groups.c: sys_ngroups is only used when HAVE_GETGROUPS is
	defined.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Ignore return value of time() when use with a
	non NULL argument.
	* src/faillog.c: Use a %lu format and cast number of days to
	unsigned long integers.
	* src/faillog.c: Cast dates to time_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Ignore the return value of signal().
	* src/login.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/login.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Add the arguments' names in the functions
	prototypes.
	* src/chage.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/chage.c: print_date() received a time_t.
	* src/chage.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spwent.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/groupadd.c: Cast the parsed GID/UID to a gid_t/uid_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/pwck.c: Cast number of days to a long integer.
	* src/pwck.c: Use the SCALE macro instead of (24L * 3600L)
	for the values to be set in /etc/shadow.
	* src/pwck.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spent.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Ignore return value of time() when use with a
	non NULL argument.